--- a/requirements.txt
+++ b/requirements.txt
@@ -1,23 +1,4 @@
-appnope==0.1.0
-cycler==0.10.0
-decorator==4.2.1
-ipython==6.2.1
-ipython-genutils==0.2.0
-jedi==0.11.1
-matplotlib==2.1.2
-numpy==1.14.0
-parso==0.1.1
-pexpect==4.3.1
-pickleshare==0.7.4
-prompt-toolkit==1.0.15
-ptyprocess==0.5.2
-Pygments==2.2.0
-pyparsing==2.2.0
-python-dateutil==2.6.1
-pytz==2017.3
-scipy==1.0.0
-simplegeneric==0.8.1
-six==1.11.0
-tqdm==4.19.5
-traitlets==4.3.2
-wcwidth==0.1.7
+numpy
+matplotlib
+tqdm
+click
